----------------------------------------------------------------------
 OmegaT 2.3.0
----------------------------------------------------------------------
   7 Enhancements
   4 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
2.3.0 vs. 2.2.3 update 4

  Implemented requests:

  - Allow blank translations in PO files
  http://sourceforge.net/support/tracker.php?aid=2974663

  - TransTips to consider letter case
  http://sourceforge.net/support/tracker.php?aid=3027339

  - Ability to translate WordArt in MS Office files
  http://sourceforge.net/support/tracker.php?aid=3311077

  Other enhancements:

  - In the MS Open XML filter, a new option allows to preserve white space 
(e.g., spaces and newlines) in all tags, even if it is not set technically 
in the document. As it corresponds to the most usual situation (e.g., 
preserving spaces in Excel tags), the option is on by default.

  - New version of the JNA library (used to launch Hunspell), compatible 
with Windows 64-bit

  - New Iceni Infix file filter

  - Partial support for StarDict dictionaries with sametypesequence=h

  - New Flash XML export file filter

  Bug fixes:

  - PO filter mangles \\r strings
  http://sourceforge.net/support/tracker.php?aid=3292553

  - Wrong TransTip when target term contains comma
  http://sourceforge.net/support/tracker.php?aid=2970681

  - LaTeX filter: comments are removed from target documents
  http://sourceforge.net/support/tracker.php?aid=3297471

  - PO filter: when a segment had trailing spaces, it was not visible for 
translation in OmegaT

  Localisation updates:

  - Brazilian Portuguese localisation updated to 2.2.3 update 2 (UI, documentation)
  - Dutch localisation updated to 2.2.4 (UI)

----------------------------------------------------------------------
 OmegaT 2.2.3 update 4
----------------------------------------------------------------------
   0 Enhancement
   2 Bug fixes
   0 Localisation update